--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=BioRhyme:wght@200&family=Open+Sans&family=Overpass:wght@100&display=swap"
       rel="stylesheet"
     />
 
