--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>React App</title>
+    <title>Sneak Sneakers</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
